--- a/data/style.css
+++ b/data/style.css
@@ -19,7 +19,7 @@
 }
 
 .tenlop h2 {
-    font-size: 60px;
+    font-size: 45px;
     color: #ffd966;
     font-weight: bold;
     font-style: normal;
@@ -99,7 +99,7 @@ body {
     width: 120%;
     height: 100%;
     left: -10%;
-    top: 0;
+    top: -7%;
     background-image: url('images/bia-tet.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -128,10 +128,10 @@ body {
         10px 10px 30px rgba(0, 0, 0, 0.35);
     position: relative;
     width: 200%;
-    height: 100%;
+    height: 110%;
     left: -50%;
     right: 0;
-    top: 0;
+    top: -7%;
     background: linear-gradient(135deg, #c1121f, #e63946);
     color: #333;
     border-radius: 15px;
@@ -582,7 +582,7 @@ button:active {
         height: 113%;
         object-fit: cover;
         border-radius: 14px;
-        margin-top: 20px;
+        margin-top: 7.7px;
         position: relative;
     }
 
@@ -597,7 +597,7 @@ button:active {
         display: grid !important;
         grid-template-columns: 1fr 1fr !important;
         gap: 8px !important;
-        padding: 3px !important;
+        padding: 0 !important;
         width: 200% !important;
         overflow: hidden !important;
     }
@@ -610,7 +610,7 @@ button:active {
     }
 
     #tieuDeTrai {
-        font-size: 16px !important;
+        font-size: 14px !important;
         margin-bottom: 4px !important;
         text-align: center !important;
         font-family: "Dancing Script", cursive !important;
@@ -628,7 +628,7 @@ button:active {
     #noiDungTrai p {
         margin: 0 !important;
         padding: 0 !important;
-        font-size: 7px !important;
+        font-size: 8.3px !important;
         color: #B3AF1F !important;
     }
 
@@ -641,9 +641,9 @@ button:active {
     }
 
     #noiDungPhai p {
-        margin: 0 !important;
+        margin-top: 40% !important;
         padding: 0 !important;
-        font-size: 7px !important;
+        font-size: 8.3px !important;
         color: #B3AF1F !important;
     }
 
