--- a/data/style.css
+++ b/data/style.css
@@ -78,12 +78,12 @@ body {
     top: 0;
     bottom: 0;
     left: 50%;
-
     width: 2px;
     background: linear-gradient(to bottom,
             rgba(0, 0, 0, 0.08),
             rgba(0, 0, 0, 0.15),
             rgba(0, 0, 0, 0.08));
+    z-index: 1;
 }
 
 .trang {
@@ -565,25 +565,26 @@ button:active {
 /* media */
 
 @media (max-width: 480px) {
-    .class-photo1 {
+    #anh-lop {
+        width: 90%;
+        max-height: 35%;
+        object-fit: contain;
+        border-radius: 14px;
         position: absolute;
-        bottom: 3vh;
+        bottom: 10px;
         left: 50%;
         transform: translateX(-50%);
-        width: 92%;
-        height: 22vh;
-        z-index: 3;
-        margin-top: 20px;
-        padding: 0 14px 20px;
+        z-index: -2;
     }
 
-    .class-photo1 img {
-        width: 100%;
-        height: 113%;
-        object-fit: cover;
-        border-radius: 14px;
-        margin-top: 7.7px;
-        position: relative;
+    #dao {
+        position: absolute;
+        object-fit: fill;
+        width: 54%;
+        top: 6px;
+        right: 6px;
+        height: 19%;
+        margin: -6px -20px;
     }
 
     .sach {
@@ -641,7 +642,7 @@ button:active {
     }
 
     #noiDungPhai p {
-        margin-top: 40% !important;
+        margin-top: 30% !important;
         padding: 0 !important;
         font-size: 8.3px !important;
         color: #B3AF1F !important;
